--- a/Group work/Handouts/Group 03.tex
+++ b/Group work/Handouts/Group 03.tex
@@ -18,7 +18,7 @@
 \begin{flushleft}
 \section*{Group Work - Week 3}
 
-\paragraph{1} A new blood test for a particular enzyme is being tested as screening test for lung cancer. Subjects aged 35 -50 without a history of lung cancer were given the blood test and then given a definitive diagnosis by chest scan and biopsy if necessary. The results are below.\\ \medskip
+\paragraph{1} A new blood test for a particular enzyme is being tested as screening test for lung cancer. Subjects aged 35-50 without a history of lung cancer were given the blood test and then given a definitive diagnosis by chest scan and biopsy if necessary. The results are below.\\ \medskip
 {\centering
 \begin{tabular}{ r| c c}
 & \multicolumn{2}{c}{Screening test}\\
@@ -32,12 +32,12 @@ Diagnosis & Positive & Negative\\
 
 \begin{enumalpha}
 \item What is the sensitivity of the screening test? That is, what is $P(\text{positive test} \mid \text{has cancer})$?
-\vspace{1.75in}
+\vspace{2.75in}
 
 \item What is the probability of having cancer if the screen test is positive?
 \vspace{1.75in}
 
-\item Suppose you learn that 12\% of people age 35 - 50 smoke and that 79\% of lung cancer patients are (or were) smokers. Smoking is independent of the screening test results. What is the probability of having cancer if a patients has a positive screening test and is a smoker?\\
+
 
 \end{enumalpha}
 
@@ -45,7 +45,7 @@ Diagnosis & Positive & Negative\\
 \paragraph{2} For each of the following scenarios, identify the type of study, the sampling method, and, if study is an experiment, which elements of good experimental studies are being utilized.
 
 \begin{enumalpha}
-\item The Iowa Women's Health Study mailed health and diet questionnaires to nearly 100,000 Iowa women aged 55-69 (identified through driver's license registry). The 41,837 women who returned the initial survey were mailed 6 more questionnaires over the next 22 years. Cancer incidence and mortality were tracked through the State Health Registry of Iowa.
+\item The Iowa Women's Health Study mailed health and diet questionnaires to all Iowa women aged 55-69, identified through driver's license registry (nearly 100,000). The 41,837 women who returned the initial survey were mailed 6 more questionnaires over the next 22 years. Cancer incidence and mortality were tracked through the State Health Registry of Iowa.
 \vspace{1in}
 
 \item A sample of about 500 elderly hearing aid users selected from 10 randomly selected nursing home and senior living centers. They were randomly assigned to receive either audiologist adjusted hearing aids with only volume controls or hearing aids with controls that allowed the user to fine tune settings. After 6 months, severals different measures of hearing aid satisfaction and social engagement were collected.
@@ -54,7 +54,7 @@ Diagnosis & Positive & Negative\\
 \item The ACCOMPLISH trial sought to compare a thiazide with a calcium channel blocker (CCB) as combination therapy with an angiotensin-converting-enzyme (ACE) inhibitor in reducing cardiovascular events in patients with hypertension. A total of 11,506 patients from 548 centres in the United States, Sweden, Norway, Denmark, and Finland were randomized to receive either 1) benazepril plus amlodipine or 2) benazepril plus HCTZ. Neither patients nor their caregivers were aware of which treatment group they were in. The primary endpoint was a composite of cardiovascular events or death from cardiovascular causes
 \vspace{1in}
 
-\item A study examined health records of over 500,000 children born in Denmark from 1991 to 1998. Researchers looked MMR vaccination status at 15 months of age and autism diagnosis. No association between vaccination status or timing of vaccinations and autism was found.
+\item A study examined health records of children born in Denmark from 1991 to 1998 (over 500,000). Researchers looked MMR vaccination status at 15 months of age and autism diagnosis. No association between vaccination status or timing of vaccinations and autism was found.
 \end{enumalpha} 
 \end{flushleft}
 \end{document}
